# routes/v1/routes.php
@@ -1,0 +1,7 @@
+<?php
+
+use Illuminate\Support\Facades\Route;
+
+Route::prefix('books')->as('books:')->group(
+    base_path('routes/v1/books.php'),
+);
