# storage/api-docs/api-docs.json
@@ -1,18 +1,120 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "L5 OpenApi",
-        "description": "L5 Swagger OpenApi description",
+        "title": "Bookshop-api Documentation",
+        "description": "bookshop api",
         "version": "1.0.0"
     },
+    "servers": [
+        {
+            "url": "http://127.0.0.1:8000/api/v1",
+            "description": "local server"
+        },
+        {
+            "url": "http://staging.example.com",
+            "description": "staging server"
+        },
+        {
+            "url": "http://example.com",
+            "description": "production server"
+        }
+    ],
     "paths": {
-        "/api/books": {
+        "/books": {
             "get": {
                 "tags": [
-                    "Books"
+                    "Admin"
                 ],
-                "summary": "Get a list of books",
-                "operationId": "a9d13283dfab262e97af3c914d51b7a8",
+                "summary": "List all books",
+                "operationId": "a10e4a818252d65df144d684ab9adc74",
+                "responses": {
+                    "200": {
+                        "description": "users retrieved success"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "not found"
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Create Book",
+                "operationId": "4ce2db67f52e0575188b064e86d6521c",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "required": [
+                                    "title",
+                                    "author",
+                                    "year",
+                                    "description"
+                                ],
+                                "properties": {
+                                    "title": {
+                                        "description": "Book title",
+                                        "type": "string"
+                                    },
+                                    "author": {
+                                        "description": "Author",
+                                        "type": "string"
+                                    },
+                                    "year": {
+                                        "description": "Year",
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "description": "Short description",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Register Successfully"
+                    },
+                    "422": {
+                        "description": "Unprocessable entity"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/books/{id}": {
+            "get": {
+                "tags": [
+                    "Book"
+                ],
+                "summary": "Show a book",
+                "operationId": "24abf80c2941896c367f0f78fd4aa3fd",
                 "responses": {
                     "200": {
                         "description": "Successful operation"
@@ -22,22 +124,15 @@
                     }
                 }
             }
-        },
-        "/api/books/{id}": {
-            "get": {
-                "tags": [
-                    "Book"
-                ],
-                "summary": "Show a book",
-                "operationId": "2fdd668eb661591758aff4c56ca9b66a",
-                "responses": {
-                    "200": {
-                        "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Invalid request"
-                    }
-                }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "name": "Authorization",
+                "in": "header",
+                "scheme": "bearer"
             }
         }
     }
